# base_api_ddd_fastapi

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: di.py  main.py
src/application/repositories/: example.py
src/application/usecases/: get_all_examples.py
src/application/usecases/interfaces/: get_all_examples.py
src/domain/: example.py
src/domain/ddd/: aggregates.py  exceptions.py
src/domain/rules/: example.py
src/infra/databases/sqlalchemy/: connection.py
src/infra/databases/sqlalchemy/adapters/: example.py
src/infra/databases/sqlalchemy/entities/: example.py
src/infra/databases/sqlalchemy/repositories/: example.py
src/infra/http/routers/: example.py
